--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -690,7 +690,7 @@ var defaults = {
   "NYSE:EWJ": { name: "ETF Geo Japan" },
 
   //GOLD + GOLD MINERS
-  "NASD:$GOLD": { name: "_ Gold Price", tags: "Gold"},
+  "NASD:$GOLD": { name: ". Gold Price", tags: "Gold"},
   "NYSE:GLD": { name: "ETF Basic Gold", tags: "Gold" },
 
   "NYSE:GDX": { name: "ETF Gold Miners", tags: "Gold Miners" },
@@ -723,7 +723,7 @@ var defaults = {
   "NYSE:RIO": { name: "Rio Tinto", tags: "Coal Copper Diamond Iron Gold Miner"},
 
   //SILVER + SILVER MINERS
-  "NASD:$SILVER": { name: "_ Silver Price", tags: "Silver"},
+  "NASD:$SILVER": { name: ". Silver Price", tags: "Silver"},
   "NYSE:SLV": { name: "ETF Basic Silver", tags: "Silver" },
 
   "NYSE:SLVP": { name: "ETF Silver Miners", tags: "Silver Miners" },
