--- a/notations/distance/index.html
+++ b/notations/distance/index.html
@@ -171,6 +171,20 @@ function getObjectExpiring(name, fallback) {
 	return object;
 }
 
+function createKey() {
+	let key = "";
+
+	const len = arguments.length;
+	for (let i = 0; i < len; i++) {
+		key += arguments[i].toLowerCase().trim().replace(/  +/g, ' ').replace(/\//g, '');
+		if (i + 1 < len) {
+			key += "/";
+		}
+	}
+
+	return key;
+}
+
 function slugify(s) {
 	var t = s.toLowerCase().trim().replace(/  +/g, ' ').split(' ');
 
@@ -259,7 +273,8 @@ class Notation {
   setPurchaseInfo(investment, interest, sellAt) {
     const result = this.calcPurchaseInfo(investment, interest, sellAt);
 
-    setObject(notation.id, {
+    const key = createKey("stock", notation.symbol, "calc");
+    setObject(key, {
       amount: investment,
       interest: interest,
       sellAt: sellAt
@@ -480,7 +495,8 @@ class Notation {
 
     //get basic quote information
     const pQuote = new Promise(function (resolve, reject) {
-      const cacheKey = "priceDetails-quote-" + symbol;
+      const cacheKey = createKey("stock", symbol, "data", "quote");
+
       const cached = getObjectExpiring(cacheKey, null);
       if (cached) {
         //console.log("CACHE HIT: " + JSON.stringify(cached));
@@ -493,7 +509,7 @@ class Notation {
             //console.log("CALL_FREQUENCY_TOO_HIGH");
             reject("CALL_FREQUENCY_TOO_HIGH");
           } else if(response["Error Message"]) {
-            console.log(response["Error Message"]);
+            console.log(JSON.stringify(response));
             reject("UNKNOWN_ERROR");
           } else {
             const globalQuote = response["Global Quote"];
@@ -516,7 +532,8 @@ class Notation {
 
     //get simple moving average
     const pSma = new Promise(function (resolve, reject) {
-      const cacheKey = "priceDetails-avgSimpleYearly-" + symbol;
+      const cacheKey = createKey("stock", symbol, "data", "sma");
+
       const cached = getObjectExpiring(cacheKey, null);
       if (cached) {
         //console.log("CACHE HIT: " + JSON.stringify(cached));
@@ -528,7 +545,7 @@ class Notation {
           if (response.Note && response.Note.indexOf("call frequency") != -1) {
             reject("CALL_FREQUENCY_TOO_HIGH");
           } else if(response["Error Message"]) {
-            console.log(response["Error Message"]);
+            console.log(JSON.stringify(response));
             reject("UNKNOWN_ERROR");
           } else {
             const intervals = response["Technical Analysis: SMA"];
@@ -815,7 +832,7 @@ function getNotation(id) {
     var pinned = (md && md.pinned) ? true : false;
     if (!md) {
       metadata[id] = { name: name, pinned: pinned };
-      setObject("metadata", metadata);
+      setObject(createKey("root", "toc"), metadata);
     }
     notation = new Notation(id, name, tags, pinned);
   }
@@ -829,13 +846,13 @@ function setNotation(idOrNotation) {
     } else {
       metadata[idOrNotation.id] = { name: idOrNotation.name, pinned: idOrNotation.pinned, tags: idOrNotation.tags };
     }
-    setObject("metadata", metadata);
+    setObject(createKey("root", "toc"), metadata);
   }
 }
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject("metadata", metadata);
+  setObject(createKey("root", "toc"), metadata);
 }
 
 
@@ -845,8 +862,8 @@ function deleteNotation(id) {
       const table = $('table');
 
       let tr0 = '<tr>';
-      tr0 +=  '<th style="text-align:left; padding-right:20px">name</th>';
       tr0 +=  '<th style="text-align:left; padding-right:20px">symbol</th>';
+      tr0 +=  '<th style="text-align:left; padding-right:20px">name</th>';
       tr0 +=  '<th style="text-align:left; padding-right:20px">tags</th>';
       tr0 +=  '<th style="text-align:right; padding-left:20px">price</th>';
       tr0 +=  '<th style="text-align:right; padding-left:20px">average</th>';
@@ -858,8 +875,8 @@ function deleteNotation(id) {
         const row = content[i];
 
         let tr = '<tr>';
-        tr += '<td style="text-align:left; padding-right:20px"><a target="_blank" href="../details/?id=' + row.id + '">' + row.name + '</a></td>';
         tr += '<td style="text-align:left; padding-right:20px"><a target="_blank" href="../details/?id=' + row.id + '">' + row.symbol + '</a></td>';
+        tr += '<td style="text-align:left; padding-right:20px"><a target="_blank" href="../details/?id=' + row.id + '">' + row.name + '</a></td>';
         tr += '<td style="text-align:left; padding-right:20px">' + row.tags + '</td>';
         tr += '<td style="text-align:right; padding-left:20px">' + row.price.toFixed(2) + '&nbsp;$</td>';
         tr += '<td style="text-align:right; padding-left:20px">' + row.sma.toFixed(2) + '&nbsp;$</td>';
