--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -149,6 +149,20 @@ function getObjectExpiring(name, fallback) {
 	return object;
 }
 
+function createKey() {
+	let key = "";
+
+	const len = arguments.length;
+	for (let i = 0; i < len; i++) {
+		key += arguments[i].toLowerCase().trim().replace(/  +/g, ' ').replace(/\//g, '');
+		if (i + 1 < len) {
+			key += "/";
+		}
+	}
+
+	return key;
+}
+
 function slugify(s) {
 	var t = s.toLowerCase().trim().replace(/  +/g, ' ').split(' ');
 
@@ -237,7 +251,8 @@ class Notation {
   setPurchaseInfo(investment, interest, sellAt) {
     const result = this.calcPurchaseInfo(investment, interest, sellAt);
 
-    setObject(notation.id, {
+    const key = createKey("stock", notation.symbol, "calc");
+    setObject(key, {
       amount: investment,
       interest: interest,
       sellAt: sellAt
@@ -458,7 +473,8 @@ class Notation {
 
     //get basic quote information
     const pQuote = new Promise(function (resolve, reject) {
-      const cacheKey = "priceDetails-quote-" + symbol;
+      const cacheKey = createKey("stock", symbol, "data", "quote");
+
       const cached = getObjectExpiring(cacheKey, null);
       if (cached) {
         //console.log("CACHE HIT: " + JSON.stringify(cached));
@@ -471,7 +487,7 @@ class Notation {
             //console.log("CALL_FREQUENCY_TOO_HIGH");
             reject("CALL_FREQUENCY_TOO_HIGH");
           } else if(response["Error Message"]) {
-            console.log(response["Error Message"]);
+            console.log(JSON.stringify(response));
             reject("UNKNOWN_ERROR");
           } else {
             const globalQuote = response["Global Quote"];
@@ -494,7 +510,8 @@ class Notation {
 
     //get simple moving average
     const pSma = new Promise(function (resolve, reject) {
-      const cacheKey = "priceDetails-avgSimpleYearly-" + symbol;
+      const cacheKey = createKey("stock", symbol, "data", "sma");
+
       const cached = getObjectExpiring(cacheKey, null);
       if (cached) {
         //console.log("CACHE HIT: " + JSON.stringify(cached));
@@ -506,7 +523,7 @@ class Notation {
           if (response.Note && response.Note.indexOf("call frequency") != -1) {
             reject("CALL_FREQUENCY_TOO_HIGH");
           } else if(response["Error Message"]) {
-            console.log(response["Error Message"]);
+            console.log(JSON.stringify(response));
             reject("UNKNOWN_ERROR");
           } else {
             const intervals = response["Technical Analysis: SMA"];
@@ -793,7 +810,7 @@ function getNotation(id) {
     var pinned = (md && md.pinned) ? true : false;
     if (!md) {
       metadata[id] = { name: name, pinned: pinned };
-      setObject("metadata", metadata);
+      setObject(createKey("root", "toc"), metadata);
     }
     notation = new Notation(id, name, tags, pinned);
   }
@@ -807,13 +824,13 @@ function setNotation(idOrNotation) {
     } else {
       metadata[idOrNotation.id] = { name: idOrNotation.name, pinned: idOrNotation.pinned, tags: idOrNotation.tags };
     }
-    setObject("metadata", metadata);
+    setObject(createKey("root", "toc"), metadata);
   }
 }
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject("metadata", metadata);
+  setObject(createKey("root", "toc"), metadata);
 }
 
 
