--- a/notations/distance/index.html
+++ b/notations/distance/index.html
@@ -853,7 +853,7 @@ function setNotation(idOrNotation) {
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject(createKey(metadataKey, metadata);
+  setObject(createKey(metadataKey, metadata));
 }
 
 
