--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -831,7 +831,7 @@ function setNotation(idOrNotation) {
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject(createKey(metadataKey, metadata);
+  setObject(createKey(metadataKey, metadata));
 }
 
 
