--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -911,7 +911,7 @@ function setNotation(idOrNotation) {
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject(createKey(metadataKey, metadata);
+  setObject(createKey(metadataKey, metadata));
 }
 
 
