--- a/notations/index.html
+++ b/notations/index.html
@@ -2865,7 +2865,7 @@ function setNotation(idOrNotation) {
 
 function deleteNotation(id) {
   delete metadata[id];
-  setObject(createKey(metadataKey, metadata);
+  setObject(createKey(metadataKey, metadata));
 }
 
 
