--- a/notations/index.html
+++ b/notations/index.html
@@ -2265,7 +2265,7 @@ class Notation {
   }
 
   get purchaseInfo() {
-    const key = createKey("stock", notation.symbol, "calc");
+    const key = createKey("stock", this.symbol, "calc");
     let info = getObject(key);
     if (!info) {
       info = {
@@ -2286,7 +2286,7 @@ class Notation {
   setPurchaseInfo(investment, interest, sellAt) {
     const result = this.calcPurchaseInfo(investment, interest, sellAt);
 
-    const key = createKey("stock", notation.symbol, "calc");
+    const key = createKey("stock", this.symbol, "calc");
     setObject(key, {
       amount: investment,
       interest: interest,
