--- a/notations/index.html
+++ b/notations/index.html
@@ -2957,6 +2957,7 @@ function deleteNotation(id) {
   <footer>
     <ul>
       <li><a href="./config/" target="_blank">View config</a></li>
+      <li><a href="https://fred.stlouisfed.org/graph/?g=mEYY" target="_blank">&#8594; Buffett indicator</a></li>
     </ul>
   </footer>
 </body>
