--- a/jacqueline/index.html
+++ b/jacqueline/index.html
@@ -13,7 +13,7 @@
 
 <div class="grid-container">
   <div style="grid-area:hed;"><h1>Ford Mustang 1970 Mach1 428 Cobra Jet Jacqueline</h1></div>
-  <div class="hero" style="grid-area:img;"><img src="/assets/hero.png"/></div>
+  <div class="hero" style="grid-area:img;"><img src="./assets/hero.png"/></div>
 
   
   <div style="grid-area:c01;">
