--- a/jacqueline/index.html
+++ b/jacqueline/index.html
@@ -1498,7 +1498,7 @@ function showPopOver(id) {
 }
 
 const hash = window.location.hash.substr(1);
-if(hash != undefined) {
+if(hash) {
   showPopOver(hash);
 }
 
