--- a/jacqueline/index.html
+++ b/jacqueline/index.html
@@ -1102,7 +1102,11 @@ Relay box is located in the front passenger side, next to the radiator.</p>
     <div id="engine" class="pop-over" onclick="hideAllPopOvers(event)">
       <div>
         <h3>Engine</h3>
-        <p>Measured at one of the carburetor vacuum ports this engine creates 20.5 hg vacuum in warm idle.</p>
+        <h4 id="vacuum">Vacuum</h4>
+<p>Measured at one of the carburetor vacuum ports this engine creates 20.5 hg vacuum in warm idle.</p>
+
+<h4 id="oil-pressure">Oil Pressure</h4>
+<p>Oil pressure at warm idle is 60 psi, when measured at the oil filter.</p>
 
 
         
