--- a/jacqueline/index.html
+++ b/jacqueline/index.html
@@ -1882,6 +1882,8 @@ Part number from Scott Drake is <a href="https://www.google.com/search?q=S1MS-96
           <p>Carburetor is a <a href="https://www.holley.com/products/fuel_systems/carburetors/street/parts/0-80670">Holley Street Avenger 670</a> in Revision 6.
 It injects 670cfm via 4 barrels, two primaries, two secondaries.
 Primaries are mechanical with a 10.5 power valve and 68 main jets.
+Accellerator pump diaghragm size is 30cc.
+Main squirter size is 52, which is the largest we could find.
 Secondaries are vacuum-initiated using a purple Moroso spring and 72 jets.
 Carburetor is mounted on a 2” open spacer.
 Choke is electrical.</p>
@@ -1896,6 +1898,10 @@ We swapped in a purple vacuum spring from Moroso, because the old spring was “
 We increased the primary power valve from 6.5 to 10.5, because we experienced a stumble off the line.
 We realigned and tested the electric choke.
 We added an air cleaner gasket, since it was missing.</p>
+
+<h4 id="update-2021-09">Update 2021-09</h4>
+<p>We increased the main squirter size from 32 to 52, because we have a lean condition when hard-tapping the throttle.
+We re-calibrated accelerator pump timing, so that the pump squirts immediately. This helps with the stumble.</p>
 
 <h4 id="links">Links</h4>
 <ul>
